feat: add MDX components for enhanced documentation styling and update Pattern Lock page content

--- a/src/doc/components/pattern-lock.mdx
+++ b/src/doc/components/pattern-lock.mdx
@@ -3,13 +3,13 @@ title: Documentation
 description: Pattern Lock is a UI component that allows users to draw a pattern by connecting dots, similar to the pattern lock feature found on many mobile devices.
 ---
 
-## Features
+### Features
 - Click and drag to connect the dots and create a pattern.
 - Press the **Reset** button to clear the pattern.
 - The output below the lock shows the pattern as a sequence of numbers.
 - Fully responsive and works in both light and dark themes.
 
-## Usage
+### Usage
 
 ```tsx
 import { PatternLock } from "@/components/pattern-lock";
@@ -22,9 +22,7 @@ import { PatternLock } from "@/components/pattern-lock";
 />
 ```
 
-## Customization
-- You can adjust the dot size and line width via props.
-- The component adapts to the current theme automatically.
+### component
 
 ```tsx
 "use client";
